@@ -139,7 +139,7 @@ $coefficients
 54  0.0989545407 -1.357243e-05 -3.683573e-02 -0.028339562 -0.025145841
 55  0.1644148644 -1.347342e-04  1.507463e-01  0.272775865  0.355144259
 56 -1.0973102505  2.844224e-04 -2.939639e-01 -0.267067176 -0.586604116
-57           NaN           NaN           NaN          NaN          NaN
+57  0.0000000000  0.000000e+00  0.000000e+00  0.000000000  0.000000000
 58  1.1181936467 -1.814925e-04  1.820092e-01  0.230407448  0.281788680
 59 -0.1289781075  2.595372e-05 -3.776833e-02 -0.058580136 -0.126069473
 60  0.4827651281 -1.458463e-04  9.396412e-02 -0.005593267  0.099263965
@@ -233,7 +233,7 @@ $coefficients
 54 -0.0150792891   -0.0425585103  6.777594e-03  0.0030583353 -0.0591176911
 55  0.4668348880   -0.0212547234  4.732189e-01  0.4185931034  0.2944838529
 56 -0.7432312183   -0.2735589895 -6.870778e-02 -0.0393632338  0.1816128390
-57           NaN             NaN           NaN           NaN           NaN
+57  0.0000000000    0.0000000000  0.000000e+00  0.0000000000  0.0000000000
 58  0.1945880055   -0.5587521455 -2.266734e-01 -0.3613221042 -0.5509923750
 59 -0.0900361434    0.0807855154 -8.877433e-04 -0.0437027380  0.0203231292
 60  0.2757970992   -0.3494459094  2.397384e-01  0.1279587545 -0.1512732820
@@ -327,7 +327,7 @@ $coefficients
 54 -0.0052948316  0.0043390590 -0.0062558306   -0.0100922249  -0.0036764450
 55  0.3245941919  0.4533108376 -0.1196342985   -0.0946588832   0.0778256270
 56  0.1438282891 -0.5411631576  0.0968253310    0.3927869929   0.2777652749
-57           NaN           NaN           NaN             NaN            NaN
+57  0.0000000000  0.0000000000  0.0000000000    0.0000000000   0.0000000000
 58 -0.5770947483 -0.1184054962 -0.1740228604   -0.0285545091   0.7693037902
 59  0.0412280879 -0.0075198458  0.0438882586    0.0121450418  -0.1252262379
 60  0.3533541160  0.2760694598 -0.1036620689    0.1001975219   0.0703124944
@@ -381,7 +381,7 @@ $sigma
       49       50       51       52       53       54       55       56 
 3.588734 3.589710 3.583459 3.581755 3.599157 3.599895 3.528075 3.559578 
       57       58       59       60       61       62       63       64 
-     NaN 3.523963 3.598459 3.571771 3.582319 3.600406 3.596626 3.592960 
+3.601231 3.523963 3.598459 3.571771 3.582319 3.600406 3.596626 3.592960 
       65       66       67       68       69       70       71       72 
 3.583325 3.600828 3.569987 3.592482 3.599979 3.580547 3.600799 3.599768 
       73       74       75       76       77       78       79       80 
@@ -440,7 +440,7 @@ Potentially influential observations of
 28  0.11  -0.15     0.04     0.02     0.02     0.02     0.04     0.07   
 39 -0.19   0.05     0.34     0.21     0.25     0.18     0.18    -0.01   
 42  0.12  -0.04    -0.30    -0.17    -0.28    -0.26    -0.11    -0.03   
-57   NaN    NaN      NaN      NaN      NaN      NaN      NaN      NaN   
+57  0.00   0.00     0.00     0.00     0.00     0.00     0.00     0.00   
 66 -0.03   0.04    -0.02    -0.03    -0.01     0.00    -0.02    -0.01   
 80  0.18   0.00    -0.31    -0.17    -0.24    -0.19    -0.15     0.00   
 83  0.01   0.01    -0.04    -0.03    -0.04    -0.03    -0.02     0.00   
@@ -453,7 +453,7 @@ Potentially influential observations of
 28  0.08    -0.08     -0.09      0.16     0.06     0.09     0.12    -0.26
 39 -0.01     0.04      0.01     -0.06     0.01    -0.08    -0.08    -0.44
 42  0.01    -0.42      0.01     -0.03     0.18    -0.10    -0.11    -0.89
-57   NaN      NaN       NaN       NaN      NaN      NaN      NaN      NaN
+57  0.00     0.00      0.00      0.00     0.00     0.00     0.00      NaN
 66 -0.02     0.01      0.01      0.02    -0.03     0.05     0.03     0.08
 80  0.01     0.01     -0.02     -0.07     0.01    -0.18    -0.14     0.45
 83  0.00     0.00      0.00      0.00     0.00     0.01     0.01     0.05
